# spike

./: pyproject.toml
src/: app_producer  app_producer_binance  app_producer_deribit  app_relayer
src/configuration/: config.py
src/db_management/: redis_client.py
src/messaging/: telegram_bot.py
src/strategies/: config_strategies.toml
src/streaming_data/: data_producer_binance.py
src/transaction_management/: distributing_ws_data.py  relaying_result.py
src/transaction_management/binance/: distributing_ws_data.py
src/utilities/: string_modification.py
