[project]
name = "spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies =  [
    "dataclassy==1.0.1",
    "httpx==0.27.2",
    "loguru==0.7.3",
    "orjson==3.10.15",
    "python-dotenv==1.0.1",
    "uvloop>=0.21.0",
    "websockets==15.0",
]
