[project]
name = "spike"
version = "0.1.0"
authors = [
  { name="ven.ajie", email="venoajie@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies =  [ 
    "dataclassy==1.0.1",
    "loguru==0.7.3",
    "ws-streamer>=0.1.00",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
